# ehlers-danlos-syndrome

./: .gitignore  LICENSE  README.md  pyproject.toml
ehlers_danlos_syndrome/: cli.py  genome.py  rsids.py  snpedia.py
ehlers_danlos_syndrome/data/: rsids.txt
tests/: test_snpedia.py
tests/data/: with_eds.txt  without_eds.txt
