[tool.poetry]
name = "ehlers_danlos_syndrome"
version = "0.1.0"
description = ""
authors = ["Aidan Holland <thehappydinoa@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
eds = 'ehlers_danlos_syndrome.cli:main'

[tool.poetry.dependencies]
python = "^3.7"
arv = "^0.9.2"
beautifulsoup4 = "^4.10.0"
click = "^8.0.1"
requests = "^2.26.0"
rich = "^10.11.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}
flake8 = {version = "^3.9.2", allow-prereleases = true}
mypy = {version = "^0.910", allow-prereleases = true}
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
